@@ -1,3 +1,7 @@
+2009-02-25 Denton Woods <doomwiz@users.sf.net>
+	* il_iwi.c:329: Changed IL_MAX parameter from 16 to 8 (copy+paste error).
+	* WindowsTest.cpp: Added mipmap functionality to 0-9 keys (0 goes to main image).
+	
 2009-02-24 Denton Woods <doomwiz@users.sf.net>
 	* vc9 Unicode projects: Changed settings to use x64 and x86 directories for .obj files.
 	* test/in: Removed this directory.
